Add user elements features

--- a/eda/static/ioda/IODA_client.html
+++ b/eda/static/ioda/IODA_client.html
@@ -481,7 +481,7 @@
 			$('#mMainElementsSideNav').append(sMainElementList.getMainPanel());
 
 			// SAVES ME TIME!
-			sMainCommConnection.login(mMainServerWS, "paco", "");
+			//sMainCommConnection.login(mMainServerWS, "paco", "");
 
 		</script>		
 
